fix spacing on iphone 11

--- a/src/CSS/Home2.css
+++ b/src/CSS/Home2.css
@@ -660,7 +660,7 @@ a{
     }
     #white_text{
         position: relative;
-        /* margin-top: 80%; */
+        margin-top: 75%;
         background-color: #EDF778;
      }
     #left{
